--- a/DemoTwoDirectionalCollectionViewLayout/Base.lproj/Main.storyboard
+++ b/DemoTwoDirectionalCollectionViewLayout/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hpq-Vc-RLA">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewLayout key="collectionViewLayout" id="bsH-Tm-7ob" customClass="TwoDirectionalCollectionViewLayout" customModule="DemoTwoDirectionalCollectionViewLayout" customModuleProvider="target"/>
+                                <collectionViewLayout key="collectionViewLayout" id="0Ry-TY-DC8"/>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorCell" id="4xc-qX-cdU">
                                         <rect key="frame" x="0.0" y="0.0" width="87" height="51"/>
